--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -1,39 +1,42 @@
-<ion-header mode="ios" >
+<ion-header mode="ios">
   <ion-toolbar>
+    <!-- <ion-buttons *ngIf="ex !== 'inicio'" slot="start">
+      <ion-button (click)="back()">
+        <ion-icon slot="icon-only" name="arrow-back-outline" color="dark"></ion-icon>
+      </ion-button>
+    </ion-buttons> -->
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title style="background-color: #57C5B6;">
       Chess199
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="openMenu()">
-        <ion-icon slot="icon-only" name="settings"></ion-icon>
+      <ion-button (click)="openMenu($event)">
+        <ion-icon slot="icon-only" name="menu-outline" color="dark"></ion-icon>
       </ion-button>
+      <ion-popover [isOpen]="isPopoverOpen" #menu (didDismiss)="isPopoverOpen = false" mode="md">
+        <ng-template>
+          <ion-list class="cursorEvent">
+            <ion-item (click)="cuenta()">
+              <ion-label>Cuenta</ion-label>
+              <ion-icon slot="end" name="person-outline" color="dark"></ion-icon>
+            </ion-item>
+            <ion-item (click)="ajustes()">
+              <ion-label>Ajustes</ion-label>
+              <ion-icon slot="end" name="settings-outline" color="primary"></ion-icon>
+            </ion-item>
+            <ion-item (click)="cerrarSesion()">
+              <ion-label>cerrar sesion</ion-label>
+              <ion-icon slot="end" name="log-out-outline" color="danger"></ion-icon>
+            </ion-item>
+            <ion-item (click)="acercaDe()" >
+              <ion-label>Acerca de</ion-label>
+              <ion-icon slot="end" name="alert-circle-outline" color="primary"></ion-icon>
+            </ion-item>
+          </ion-list>
+        </ng-template>
+      </ion-popover>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-<ion-menu side="end" >
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Opciones</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <ion-item>
-        <ion-icon name="person-outline" slot="start"></ion-icon>
-        <ion-label>Mi perfil</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="settings-outline" slot="start"></ion-icon>
-        <ion-label>Configuración</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="log-out-outline" slot="start"></ion-icon>
-        <ion-label>Cerrar sesión</ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-content>
-</ion-menu>
