--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -1,9 +1,7 @@
 <ion-header mode="ios">
   <ion-toolbar>
     <ion-buttons *ngIf="ex !== 'inicio'" slot="start">
-      <ion-button (click)="back()">
-        <ion-icon slot="icon-only" name="arrow-back-outline" color="dark"></ion-icon>
-      </ion-button>
+      <ion-back-button defaultHref="/" text="Volver"></ion-back-button>
     </ion-buttons>
     <ion-title style="background-color: #57C5B6;">
       Chess199
