--- a/src/app/pages/ajedrez/ajedrez.page.html
+++ b/src/app/pages/ajedrez/ajedrez.page.html
@@ -8,12 +8,15 @@
 </ion-header>
 <ion-content>
     <table class="board">
-        <tr *ngFor="let row of rows">
-            <ng-container *ngFor="let col of cols">
-                <td [id]="" [class.white]="isWhite(row, col)"></td>
-            </ng-container>
+        <tr *ngFor="let row of rows; let i = index">
+          <ng-container *ngFor="let col of cols; let j = index">
+            <td [id]="nombreCasilla" [class.white]="isWhite(row, col)" (click)="casilla($event)">
+              <div *ngIf="piezas[i][j]">
+                <img [id]="nombreCasilla" class="pieza" src="../../../assets/piezas/{{piezas[i][j]}}.png" alt="{{piezas[i][j]}}">
+              </div>
+            </td>
+          </ng-container>
         </tr>
-    </table>
+      </table>
 </ion-content>
 <app-pie></app-pie>
-
