--- a/src/app/pages/ajedrez/ajedrez.page.scss
+++ b/src/app/pages/ajedrez/ajedrez.page.scss
@@ -1,16 +1,23 @@
 .board {
-    width: 50%;
-    height: 80%;
+    width: 40vw;
+    height: 40vw;
     table-layout: fixed;
     border-collapse: collapse;
     margin: auto;
-    margin-top: 3%;
+    margin-top: 1%;
   }
   
   td {
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
+    box-sizing: border-box;
     border: 1px solid black;
+    text-align: center;
+    vertical-align: middle;
+    padding: 0;
+    border: 1px solid black;
+    cursor: pointer;
+
   }
   
   td.white {
@@ -18,5 +25,8 @@
   }
   
   td:not(.white) {
-    background-color: #663300;
+    background-color: #a55403;
+  }
+  .selected {
+    background-color: yellow;
   }
