--- a/src/app/pages/ajedrez/ajedrez.page.scss
+++ b/src/app/pages/ajedrez/ajedrez.page.scss
@@ -16,8 +16,6 @@
     vertical-align: middle;
     padding: 0;
     border: 1px solid black;
-
-
   }
   
   td.white {
@@ -45,4 +43,5 @@
 
   .posibilidades{
     opacity: 0.5;
+    cursor: pointer;
   }
