--- a/src/app/pages/ajedrez/ajedrez.page.html
+++ b/src/app/pages/ajedrez/ajedrez.page.html
@@ -11,7 +11,7 @@
         <tr *ngFor="let row of rows; let i = index">
           <ng-container *ngFor="let col of cols; let j = index">
             <td [id]="nombreCasilla" [class.white]="isWhite(row, col)" >
-                <img (click)="casilla($event)" *ngIf="piezas[i][j]" class="back" [id]="nombreCasilla" class="pieza" src="../../../assets/piezas/{{piezas[i][j]}}.png" alt="{{piezas[i][j]}}">
+                <img (click)="casilla($event)" *ngIf="piezas[i][j]" class="back" [id]="idPieza | json" class="pieza" src="../../../assets/piezas/{{piezas[i][j]}}.png" alt="{{piezas[i][j]}}">
             </td>
           </ng-container>
         </tr>
