--- a/src/app/pages/ajedrez/ajedrez.page.scss
+++ b/src/app/pages/ajedrez/ajedrez.page.scss
@@ -8,14 +8,14 @@
   }
   
   td {
-    width: 50px;
-    height: 50px;
+    width: 65px;
+    height: 65px;
     box-sizing: border-box;
     border: 1px solid black;
     text-align: center;
     vertical-align: middle;
     padding: 0;
-    border: 1px solid black;
+    
   }
   
   td.white {
@@ -30,11 +30,13 @@
   }
 
   .pieza{
+    height: 60px;
+    width: 60px;
     cursor: pointer;
   }
 
-  .back {
-    height: 100%;
+  .imgPiezas {
+ 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,6 +44,7 @@
   }
 
   .posibilidades{
-    opacity: 0.5;
+    filter: brightness(0.7);
     cursor: pointer;
+    
   }
