--- a/src/app/pages/ajedrez/ajedrez.page.html
+++ b/src/app/pages/ajedrez/ajedrez.page.html
@@ -1,17 +1,10 @@
 <app-cabecera></app-cabecera>
-<ion-header>
-    <ion-toolbar>
-        <ion-title>
-            Tablero de Ajedrez
-        </ion-title>
-    </ion-toolbar>
-</ion-header>
 <ion-content>
     <table class="board">
         <tr *ngFor="let col of columnas; let i = index">
           <ng-container *ngFor="let fil of filas; let j = index">
             <td [id]="nombreCasilla" [class.white]="generaTablero(col, fil)" (click)="casilla($event)">
-                <img (click)="pieza($event)" *ngIf="piezas[i][j]" class="imgPiezas" class="pieza"  [id]="idPieza | json" src="../../../assets/piezas/{{piezas[i][j]}}.png" alt="{{piezas[i][j]}}">
+                <img (mouseout)="mouseout($event)" (mouseenter)="mouseenter($event)" (click)="pieza($event)" *ngIf="piezas[i][j]" class="imgPiezas" class="pieza"  [id]="idPieza | json" src="../../../assets/piezas/{{piezas[i][j]}}.png" alt="{{piezas[i][j]}}">
             </td>
           </ng-container>
         </tr>
