--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -11,7 +11,7 @@
         </ion-card>
       </ion-col>
       <ion-col size-md="6" size-lg="6" size="6">
-        <ion-card ion-button class="card-link" (click)="tresEnRaya()">
+        <ion-card ion-button class="card-link" [disabled]="true" (click)="tresEnRaya()">
           <img src="assets/icon/Tic_tac_toe.svg.png" />
           <ion-card-header style="background-color: #3c83d4;">
             <ion-card-title>3 en raya</ion-card-title>
@@ -19,7 +19,7 @@
         </ion-card>
       </ion-col>
       <ion-col size-md="6" size-lg="6" size="6">
-        <ion-card ion-button class="card-link" (click)="damas()">
+        <ion-card ion-button class="card-link" [disabled]="true" (click)="damas()">
           <img src="assets/icon/pexels-roman-kaiuk🇺🇦-3997813.jpg" />
           <ion-card-header style="background-color: #3c83d4;">
             <ion-card-title>Las damas</ion-card-title>
