--- a/src/app/pages/modos-ajedrez/modos-ajedrez.page.html
+++ b/src/app/pages/modos-ajedrez/modos-ajedrez.page.html
@@ -3,7 +3,7 @@
   <ion-grid fixed>
     <ion-row class="ion-justify-content-center">
       <ion-col size-md="6" size-lg="6" size="6">
-        <ion-card ion-button class="card-link"  (click)="IA()">
+        <ion-card [disabled]="true" ion-button class="card-link"  (click)="IA()">
           <img src="assets/icon/IA.jpg" />
           <ion-card-header style="background-color: #3c83d4;">
             <ion-card-title>IA</ion-card-title>
