--- a/src/app/pages/ajedrez/ajedrez.page.scss
+++ b/src/app/pages/ajedrez/ajedrez.page.scss
@@ -6,7 +6,10 @@
     margin: auto;
     margin-top: 1%;
   }
-  
+
+  ion-content {
+    --background: #133b3b;
+  }
   td {
     width: 65px;
     height: 65px;
