--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -27,7 +27,7 @@
         </ion-card>
       </ion-col>
       <ion-col size-md="6" size-lg="6" size="6">
-        <ion-card ion-button class="card-link" (click)="continuara()">
+        <ion-card ion-button class="card-link" [disabled]="true" (click)="continuara()">
           <img src="assets/icon/pexels-fernando-arcos-211122.jpg" />
           <ion-card-header style="background-color: #3c83d4;">
             <ion-card-title>Continuará...</ion-card-title>
