--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,21 +1,23 @@
-<ion-header>
+<ion-header class="cabecera">
   <ion-toolbar>
-    <ion-title >Iniciar sesión</ion-title>
+    <ion-title class="tituloCabecera animated bounceInDown">Iniciar sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-item>
-      <ion-label>Correo electrónico</ion-label>
-      <ion-input type="email"></ion-input>
+<ion-content class="paginaLogin">
+  <div class="formulario">
+    <ion-item lines="none">
+      <ion-icon name="mail-outline" slot="start"></ion-icon>
+      <ion-input type="email" name="email" placeholder="Email"></ion-input>
     </ion-item>
-
-    <ion-item>
-      <ion-label>Contraseña</ion-label>
-      <ion-input type="password"></ion-input>
+    <ion-item lines="none">
+      <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
+      <ion-input type="password" name="password" placeholder="Contraseña"></ion-input>
     </ion-item>
-  </ion-list>
-
-  <ion-button expand="block" (click)="login()">Iniciar sesión</ion-button>
+    <ion-button expand="block" color="primary" class="IniciarSesion" (click)="login()">Ingresar</ion-button>
+  </div>
+  <div class="registrase">
+    <p>¿Necesitas una cuenta? <a (click)="registro()">Registrarse</a></p>
+  </div>
 </ion-content>
+
