--- a/src/app/pages/registro/registro.page.scss
+++ b/src/app/pages/registro/registro.page.scss
@@ -1,4 +1,4 @@
-.paginaLogin {
+.paginaRegistro {
     height: 100%;
   }
   
@@ -20,7 +20,7 @@
     font-size: 16px;
   }
   
-  .IniciarSesion {
+  .Registro {
     margin-top: 20px;
   }
   
