--- a/src/app/pages/ajedrez/ajedrez.page.html
+++ b/src/app/pages/ajedrez/ajedrez.page.html
@@ -1,13 +1,15 @@
 <app-cabecera></app-cabecera>
 <ion-content>
-    <table class="board">
-        <tr *ngFor="let col of columnas; let i = index">
-          <ng-container *ngFor="let fil of filas; let j = index">
-            <td [id]="nombreCasilla" [class.white]="generaTablero(col, fil)" (click)="casilla($event)">
-                <img (mouseout)="mouseout($event)" (mouseenter)="mouseenter($event)" (click)="pieza($event)" *ngIf="piezas[i][j]" class="imgPiezas" class="pieza"  [id]="idPieza | json" src="../../../assets/piezas/{{piezas[i][j]}}.png" alt="{{piezas[i][j]}}">
-            </td>
-          </ng-container>
-        </tr>
-      </table>
+  <ion-grid class="board">
+    <tr *ngFor="let col of columnas; let i = index">
+      <ng-container *ngFor="let fil of filas; let j = index">
+        <td [id]="nombreCasilla" [class.white]="generaTablero(col, fil)" (click)="casilla($event)">
+          <img (mouseout)="mouseout($event)" (mouseenter)="mouseenter($event)" (click)="pieza($event)" *ngIf="piezas[i][j]" class="imgPiezas" class="pieza"  [id]="idPieza | json" src="../../../assets/piezas/{{piezas[i][j]}}.png" alt="{{piezas[i][j]}}" draggable="false">
+        </td>
+      </ng-container>
+    </tr>
+  </ion-grid>
+  
+  <ion-button expand="block" color="success" (click)="guardar()">Guardar</ion-button>
 </ion-content>
 <app-pie></app-pie>
