--- a/src/app/pages/ajedrez/ajedrez.page.scss
+++ b/src/app/pages/ajedrez/ajedrez.page.scss
@@ -58,3 +58,42 @@
     cursor: pointer;
     
   }
+  @media only screen and (max-width: 1000px) {
+    .board {
+      width: 60vw;
+      height: 60vw;
+      margin-top: 5%;
+    }
+  
+    td {
+      width: 10vw;
+      height: 10vw;
+      font-size: 0.8em;
+      padding: 0;
+    }
+  
+    .pieza {
+      height: 9vw;
+      width: 9vw;
+    }
+  }
+
+  @media only screen and (max-width: 767px) {
+    .board {
+      width: 80vw;
+      height: 80vw;
+      margin-top: 5%;
+    }
+  
+    td {
+      width: 10vw;
+      height: 10vw;
+      font-size: 0.8em;
+      padding: 0;
+    }
+  
+    .pieza {
+      height: 9vw;
+      width: 9vw;
+    }
+  }
