--- a/src/app/components/cabecera/cabecera.component.scss
+++ b/src/app/components/cabecera/cabecera.component.scss
@@ -10,3 +10,9 @@
     color: white;
     font-weight: bold;
 }
+.tituloCabecera {
+    font-size: 28px;
+    font-weight: 700;
+    text-align: center;
+    text-shadow: 2px 2px #727272;
+  }
