--- a/src/app/components/pie/pie.component.html
+++ b/src/app/components/pie/pie.component.html
@@ -1,3 +1,3 @@
 <footer style="background-color:#1A5F7A ;">
-  <p>Este es el pie de página</p>
+  <p class="pie" >Aqui van cosas del Copyrigth y esas cositas</p>
 </footer>
