--- a/src/app/components/pie/pie.component.scss
+++ b/src/app/components/pie/pie.component.scss
@@ -2,10 +2,13 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 30px;
     background-color: #333;
     color: #fff;
-    text-align: center;
-    padding: 10px;
   }
-  
+  .pie {
+    margin-top: 0;
+    font-size: 28px;
+    text-align: center;
+    text-shadow: 2px 2px #727272;
+  }
