--- a/src/app/pages/modos-damas/modos-damas.page.scss
+++ b/src/app/pages/modos-damas/modos-damas.page.scss
@@ -27,6 +27,8 @@
   }
 
   ion-content {
-    --background: #159895;
+    background-image: url('/assets/icon/fondo.jpg');
+    background-size: cover;
+    background-position: center center;
   }
   
