--- a/src/app/pages/modos-tres-en-raya/modos-tres-en-raya.page.scss
+++ b/src/app/pages/modos-tres-en-raya/modos-tres-en-raya.page.scss
@@ -27,6 +27,7 @@
   }
 
   ion-content {
-    --background: #159895;
+    background-image: url('/assets/icon/fondo.jpg');
+    background-size: cover;
+    background-position: center center;
   }
-  
