--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -21,7 +21,7 @@
       <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
       <ion-input type="password" name="Repite-contraseña" placeholder="Repite la contraseña"></ion-input>
     </ion-item>
-    <ion-button expand="block" color="primary" class="Registro" (click)="login()">Registrase</ion-button>
+    <ion-button expand="block" [disabled]="llenarFormularioRegistro()" class="Registro" (click)="login()">Registrase</ion-button>
   </div>
   <div class="registrase">
     <p>¿Ya tienes una cuenta? <a (click)="registro()">Iniciar sesion</a></p>
