--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -1,9 +1,9 @@
 <ion-header mode="ios">
   <ion-toolbar>
     <ion-buttons *ngIf="ex !== 'inicio'" slot="start">
-      <ion-back-button defaultHref="/" (click)="back()" text="Volver"></ion-back-button>
+      <ion-back-button class="volver" defaultHref="/" (click)="back()" text="Volver"></ion-back-button>
     </ion-buttons>
-    <ion-title class="tituloCabecera" style="background-color: #57C5B6;">
+    <ion-title class="tituloCabecera" style="background-color: #57c5b693;">
       Chess199
     </ion-title>
     <ion-buttons slot="end">
