--- a/src/app/components/cabecera/cabecera.component.scss
+++ b/src/app/components/cabecera/cabecera.component.scss
@@ -16,3 +16,10 @@
     text-align: center;
     text-shadow: 2px 2px #727272;
   }
+  .volver{
+    color: #000000;
+    font-size: 22px;
+    font-weight: 700;
+    text-align: center;
+    text-shadow: 2px 2px #727272;
+  }
