--- a/src/app/components/pie/pie.component.html
+++ b/src/app/components/pie/pie.component.html
@@ -1,3 +1,3 @@
-<footer style="background-color:#1A5F7A ;">
-  <p class="pie" >Aqui van cosas del Copyrigth y esas cositas</p>
+<footer style="background-color:#1a5f7a9f ;">
+  <p class="pie" >Aqui va el Copyrigth y esas cositas</p>
 </footer>
