--- a/src/app/components/pie/pie.component.scss
+++ b/src/app/components/pie/pie.component.scss
@@ -6,9 +6,11 @@ footer {
     background-color: #333;
     color: #fff;
   }
+
+  //MOVER MAS PARA ABAJOP LOS BOTONES DE GUARDADO
   .pie {
     margin-top: 0;
-    font-size: 28px;
+    font-size: 20px;
     text-align: center;
     text-shadow: 2px 2px #727272;
   }
