--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,11 +8,11 @@
   <div class="formulario">
     <ion-item lines="none">
       <ion-icon name="mail-outline" slot="start"></ion-icon>
-      <ion-input type="email" name="email" placeholder="Email"></ion-input>
+      <ion-input label='' type="email" name="email" placeholder="Email"></ion-input>
     </ion-item>
     <ion-item lines="none">
       <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
-      <ion-input type="password" name="password" placeholder="Contraseña"></ion-input>
+      <ion-input label='' type="password" name="password" placeholder="Contraseña"></ion-input>
     </ion-item>
     <ion-button expand="block" [disabled]="llenarFormularioLogin()" class="IniciarSesion" (click)="login()">Ingresar</ion-button>
   </div>
