--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -7,19 +7,19 @@
   <div class="formulario">
     <ion-item lines="none">
       <ion-icon name="person-outline" slot="start"></ion-icon>
-      <ion-input type="text" name="nombre" placeholder="Nombre de usuario"></ion-input>
+      <ion-input label=''type="text" name="nombre" placeholder="Nombre de usuario"></ion-input>
     </ion-item>
     <ion-item lines="none">
       <ion-icon name="mail-outline" slot="start"></ion-icon>
-      <ion-input type="email" name="email" placeholder="Email"></ion-input>
+      <ion-input label=''type="email" name="email" placeholder="Email"></ion-input>
     </ion-item>
     <ion-item lines="none">
       <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
-      <ion-input type="password" name="contraseña" placeholder="Contraseña"></ion-input>
+      <ion-input label=''type="password" name="contraseña" placeholder="Contraseña"></ion-input>
     </ion-item>
     <ion-item lines="none">
       <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
-      <ion-input type="password" name="Repite-contraseña" placeholder="Repite la contraseña"></ion-input>
+      <ion-input label=''type="password" name="Repite-contraseña" placeholder="Repite la contraseña"></ion-input>
     </ion-item>
     <ion-button expand="block" [disabled]="llenarFormularioRegistro()" class="Registro" (click)="login()">Registrase</ion-button>
   </div>
